@@ -2,7 +2,7 @@
 # AgentNavigationBar.dtl - provides global HTML NavigationBar
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentNavigationBar.dtl,v 1.60 2008/04/02 08:59:22 ot Exp $
+# $Id: AgentNavigationBar.dtl,v 1.61 2008/08/21 13:02:23 sb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -45,6 +45,20 @@
     <td valign="top" align="right" class="nav">
       <table border="0" cellspacing="2" cellpadding="2">
         <tr>
+<!-- dtl:block:ItemSearchProfile -->
+          <td valign="top" align="center" class="nav">
+            <div title="$Text{"$QData{"Description"}"}">
+            <form action="$Env{"CGIHandle"}" method="post" name="Search">
+              <input type="hidden" name="Action" value="AgentTicketSearch"/>
+              <input type="hidden" name="Subaction" value="LoadProfile"/>
+              <input type="hidden" name="SearchTemplate" value="$Text{"Search"}"/>
+              $Data{"Link"}
+              <br/>
+              <a href="#" accesskey="$QData{"AccessKey"}" onmouseover="window.status='$JSText{"$QData{"Name"}"}'; return true;" onmouseout="window.status='';" $Data{"LinkOption"} class="navitem" onclick="document.Search.submit()">$Text{"$QData{"Name"}"}</a>
+            </form>
+            </div>
+          </td>
+<!-- dtl:block:ItemSearchProfile -->
 <!-- dtl:block:ItemPersonal -->
           <td valign="top" align="center" class="nav">
             <div title="$Text{"$QData{"Description"}"}">
@@ -83,6 +97,20 @@
     <td valign="top" align="right" class="nav">
       <table border="0" cellspacing="2" cellpadding="2">
         <tr>
+<!-- dtl:block:ItemSearchProfile -->
+          <td valign="top" align="center" class="nav">
+            <div title="$Text{"$QData{"Description"}"}">
+            <form action="$Env{"CGIHandle"}" method="post" name="Search">
+              <input type="hidden" name="Action" value="AgentTicketSearch"/>
+              <input type="hidden" name="Subaction" value="LoadProfile"/>
+              <input type="hidden" name="SearchTemplate" value="$Text{"Search"}"/>
+              $Data{"Link"}
+              <br/>
+              <a href="#" accesskey="$QData{"AccessKey"}" onmouseover="window.status='$JSText{"$QData{"Name"}"}'; return true;" onmouseout="window.status='';" $Data{"LinkOption"} class="navitem" onclick="document.Search.submit()">$Text{"$QData{"Name"}"}</a>
+            </form>
+            </div>
+          </td>
+<!-- dtl:block:ItemSearchProfile -->
 <!-- dtl:block:ItemPersonal -->
           <td valign="top" align="center" class="nav">
             <div title="$Text{"$QData{"Description"}"}">
