@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.739 2008/08/18 14:00:36 tr Exp $
+# $Id: CHANGES,v 1.740 2008/08/21 13:02:23 sb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.3.2 (2008/??/??)
+ - (2008/08/21) Implemented display of ticket search profiles in Agent
+    Interface for immediate access (disabled by default).
  - (2008/08/18) Fixed bug# 3199 - Queue lists - The queue tree has problems
     with disabled queues.
  - (2008/08/18) Fixed bug# 3139 - QueueUpdate-Bug on oracle and postgres dbs.
